# avm-intro

./: .gitignore  CLAUDE.md  README.md  gemini.md  requirements.txt  rtsp_demo.py
3d_avm_demo/: debug_mesh.py  generate_3davm.py  generate_3davm_37.py  generate_bowl_opengl.py  generate_bowl_opengl_v32.py  generate_bowl_opengl_v34.py  generate_bowl_opengl_v35.py  generate_bowl_opengl_v36.py
config/: camera.yaml  roecs.yaml
cpp_demo/: CMakeLists.txt  README.md
cpp_demo/docs/: PROJECT_STATUS.md  README.md  TODO.md
cpp_demo/scripts/: build.sh  run.sh
cpp_demo/src/: main.cpp  nvbuffer_cuda_processor.cu  nvbuffer_cuda_processor.h  test_camera.cpp
docs/: TODO.md  TROUBLESHOOTING.md  todo-brief.md
python_demo/producer/: camera_pipeline.py  cuda_processor.py  producer.py
python_demo/rtsp_server/: rtsp_server.py
python_demo/scripts/: run_all.sh
stitching/: cuda.cu  generate_data.py  generate_roecs_lut.py  generate_test_data.py  surround_utils.py
stitching/custom_data/yaml/: back.yaml  front.yaml  left.yaml  right.yaml  test6.cpp
